Edit some links

--- a/index.html
+++ b/index.html
@@ -361,13 +361,14 @@ animation: slide 8s steps(4) infinite;
         </div>
         <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-on-hover u-gallery-2">
           <div class="u-gallery-inner u-gallery-inner-2">
-            <div class="u-effect-fade u-gallery-item u-radius-10 u-shape-round u-gallery-item-9" data-href="https://github.com/sajaddadgar/A-COVID-19-misinformation-detection-system-on-Twitter-using-network-content-mining-perspective" data-target="_blank">
+            <div class="u-effect-fade u-gallery-item u-radius-10 u-shape-round u-gallery-item-9" data-href="https://arxiv.org/ftp/arxiv/papers/2107/2107.09768.pdf" data-target="_blank">
               <div class="u-back-slide" data-image-width="1346" data-image-height="620">
                 <img class="u-back-image u-expanded" src="images/Untitled.png" alt="Checkovid">
               </div>
               <div class="u-over-slide u-shading u-over-slide-9">
                 <h2 class="u-gallery-heading" style="font-size: 1.5rem; font-weight: 700;">Checkovid</h2>
                 <p class="u-gallery-text" style="margin-top: 20px; font-size: 0.875rem;">Natural Language Processing, Deep Learning, Machine Learning, COVID-19, Misinformation</p>
+								
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item u-radius-10 u-shape-round u-gallery-item-10" data-href="https://github.com/sajaddadgar/MFCC-Speech-Recognition" data-target="_blank">
