--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ animation: slide 8s steps(4) infinite;
                       </div>Computer Science<br>
                     </li>
                   </ul>
-                  <a href="https://nicepage.com/k/quiz-html-templates" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">resume</a>
+                  <a href="Sajad Dadgar - CV.pdf" target="_blank" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">resume</a>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
