Modify some files

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ animation: slide 8s steps(4) infinite;
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#sec-ef7c" style="padding: 10px 20px;">About</a></li>
-              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Sajad Dadgar - CV.pdf" style="padding: 10px 20px;">Resume</a></li>
+              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">Resume</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_9496" style="padding: 10px 20px;">Contact</a></li>
             </ul>
           </div>
@@ -103,7 +103,7 @@ animation: slide 8s steps(4) infinite;
 </li>
 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a>
 </li>
-<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sajad Dadgar - CV.pdf" style="padding: 10px 20px;">Resume</a>
+<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">Resume</a>
 </li>
 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#sec-ef7c" style="padding: 10px 20px;">About</a>
 </li>
