--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Hello, I’m John.">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Portfolio</title>
+    <title>Sajad Dadgar</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Portfolio.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
