Fix a github link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
+	<meta name="google-site-verification" content="F2Gdyxw5GYt70TRbTN_cGJJU9pvhp2fL9Ka6lRT6u_Q" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Hello, I’m Sajad.">
@@ -347,7 +348,7 @@ animation: slide 8s steps(4) infinite;
                 <p class="u-gallery-text" style="margin-top: 20px; font-size: 0.875rem; background-image: none;">Java, Spring, React Native</p>
               </div>
             </div>
-            <div class="u-effect-fade u-gallery-item u-radius-10 u-shape-round u-gallery-item-8">
+            <div class="u-effect-fade u-gallery-item u-radius-10 u-shape-round u-gallery-item-8" data-href="https://github.com/sajaddadgar/Post-Hashtag-Incongruity" data-target="_blank">
               <div class="u-back-slide" data-image-width="1872" data-image-height="2105">
                 <img class="u-back-image u-expanded" src="images/face recognition.png" alt="Working...">
               </div>
