--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ animation: slide 8s steps(4) infinite;
 		  <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Dadgar, B. Dadgar, S. (2022) <b>The role of COVID-19 pandemic in the growth of green fintech: Driver or barrier?</b> Book chapter Fintech and Sustainability: How Financial Technologies Can Help Address Today’s Environmental and Societal Challenges, to be published by Palgrave Macmillan on 2023 (<u>Proposal Accepted</u>)
+            </div> Dadgar, B. Dadgar, S. (2022) <b>The role of COVID-19 pandemic in the growth of green fintech: Driver or barrier?</b> Book chapter Fintech and Sustainability: How Financial Technologies Can Help Address Today’s Environmental and Societal Challenges, to be published by Palgrave Macmillan on 2023 (<u>Proposal Accepted - Full chapter is under review</u>)
           </li>
 		  
 		  <li>
