--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ animation: slide 8s steps(4) infinite;
 		  <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Dadgar, S., & Neshat, M. (2022). <b>Analyzing and Detecting Post-Hashtag Incongruity on Instagram Using Deep Learning</b>. (<u>Work in progress - It will be submitted on IEEE Transactions on Computational Social Systems Journal</u>)
+            </div> Dadgar, S., & Neshat, M. (2022). <b>Analyzing and Detecting Post-Hashtag Incongruity on Instagram Using Deep Learning</b>. (<u>Submitted to IEEE Transactions on Computational Social Systems Journal</u>)
           </li>
 		  
 		  
