--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ animation: slide 8s steps(4) infinite;
           <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Research Assistant - @University of South Australia (UniSA)
+            </div> Research Assistant - Medical Image Processing @University of South Australia (UniSA)
           </li>
           <li>
             <div class="u-list-icon">
