--- a/index.html
+++ b/index.html
@@ -269,9 +269,18 @@ animation: slide 8s steps(4) infinite;
         </div>
       </div>
     </section> -->
+	
+	
+	 <section class="u-clearfix u-valign-middle u-section-3" id="sec-ef7c">
+      <img class="u-expanded-width u-image u-image-default u-image-1" src="images/17906_879333.jpg" alt="" data-image-width="1920" data-image-height="1080">
+      <div class="u-align-center u-border-10 u-border-palette-4-dark-3 u-container-style u-group u-preserve-proportions u-shape-rectangle u-group-1">
+        <div class="u-container-layout u-container-layout-1">
+          <h1 class="u-custom-font u-font-oswald u-text u-text-grey-5 u-text-1" data-animation-name="flipIn" data-animation-duration="1000" data-animation-direction="X">About me and m<span style="text-decoration: underline !important;"></span>y work
+          </h1>
+        </div>
+      </div>
+    </section>
 		
-	
-	
 	
 	<section class="u-align-center u-clearfix u-section-2" id="carousel_a0f9">
       <div class="u-clearfix u-sheet u-sheet-1">
