Change the menu bar

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ animation: slide 8s steps(4) infinite;
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#sec-ef7c" style="padding: 10px 20px;">About</a></li>
-              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">Resume</a></li>
+              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">CV</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_9496" style="padding: 10px 20px;">Contact</a></li>
             </ul>
           </div>
@@ -103,7 +103,7 @@ animation: slide 8s steps(4) infinite;
 </li>
 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a>
 </li>
-<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">Resume</a>
+<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">CV</a>
 </li>
 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#sec-ef7c" style="padding: 10px 20px;">About</a>
 </li>
@@ -406,7 +406,7 @@ animation: slide 8s steps(4) infinite;
                       </div>Computer Science<br>
                     </li>
                   </ul>
-                  <a href="Sajad Dadgar - CV.pdf" target="_blank" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">resume</a>
+                  <a href="Sajad Dadgar - CV.pdf" target="_blank" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">CV</a>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
