--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ animation: slide 8s steps(4) infinite;
 		  <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Dadgar, S., & Neshat, M. (2022). <b>Comparative Hybrid Deep Convolutional Learning Framework with Transfer Learning for Diagnosis of Lung Cancer</b>. (<u>Accepted at 14th International Conference on Soft Computing and Pattern Recognition</u>)
+            </div> Dadgar, S., & Neshat, M. (2022). <b>Comparative Hybrid Deep Convolutional Learning Framework with Transfer Learning for Diagnosis of Lung Cancer</b>. (<u>Accepted at 14th International Conference on Soft Computing and Pattern Recognition (SoCPaR 2022) - Springer</u>)
           </li>
 		  
 		  
