--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ animation: slide 8s steps(4) infinite;
 		<li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Dadgar, S., & Mansouri, Y., & Neshat, M. (2022). <b>A Novel Hybrid Multi-Modal Deep Learning for Detecting Hashtag Incongruity on Social Media</b>. (<u>Accepted by Sensors Journal</u>)
+            </div> Dadgar, S., & Neshat, M. (2022). <b>A Novel Hybrid Multi-Modal Deep Learning for Detecting Hashtag Incongruity on Social Media</b>. (<u>Accepted by Sensors Journal</u>)
           </li>
 		  
 		  
