--- a/index.html
+++ b/index.html
@@ -463,6 +463,14 @@ animation: slide 8s steps(4) infinite;
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
                       </div>Machine Learning
                     </li>
+
+
+                    <li>
+                      <div class="class u-list-icon">
+                        <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+                      </div>Deep Learning
+                    </li>
+
                     <li>
                       <div class="class u-list-icon">
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
@@ -481,7 +489,7 @@ animation: slide 8s steps(4) infinite;
                     <li>
                       <div class="class u-list-icon">
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-                      </div>Computer Science<br>
+                      </div>Cybersecurity<br>
                     </li>
                   </ul>
                   <a href="Sajad Dadgar - CV.pdf" target="_blank" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">CV</a>
@@ -490,6 +498,26 @@ animation: slide 8s steps(4) infinite;
               <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
                   <h5 class="u-align-left u-custom-font u-font-oswald u-text u-text-default u-text-3">my skills</h5>
+
+
+
+                  <ul class="u-align-left u-custom-list u-text u-text-palette-5-dark-3 u-text-4">
+                    <li>
+                      <div class="class u-list-icon">
+                        <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
+                      </div>TensorFlow
+                    </li>
+                    <li>
+                      <div class="class u-list-icon">
+                        <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
+                      </div>PyTorch
+                    </li>
+
+                  </ul>
+
+
+
+
                   <ul class="u-align-left u-custom-list u-text u-text-palette-5-dark-3 u-text-4">
                     <li>
                       <div class="class u-list-icon">
@@ -504,12 +532,12 @@ animation: slide 8s steps(4) infinite;
                     <li>
                       <div class="class u-list-icon">
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
-                      </div>Matlab<br>
+                      </div>Node.js<br>
                     </li>
                     <li>
                       <div class="class u-list-icon">
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
-                      </div> Octave<br>
+                      </div> Matlab<br>
                     </li>
                   </ul>
                   <ul class="u-align-left u-custom-list u-text u-text-palette-5-dark-3 u-text-5">
@@ -584,6 +612,11 @@ animation: slide 8s steps(4) infinite;
                       <div class="u-list-icon">
                         <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
                       </div>Git
+                    </li>
+                    <li>
+                      <div class="u-list-icon">
+                        <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">—</div>
+                      </div>Docker
                     </li>
                   </ul>
                   <ul class="u-align-left u-custom-list u-text u-text-palette-5-dark-3 u-text-9">
