--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ animation: slide 8s steps(4) infinite;
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1">
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a></li>
-              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a></li>
+              <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_a0f9" style="padding: 10px 20px;">Projects</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#sec-ef7c" style="padding: 10px 20px;">About</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">CV</a></li>
               <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_9496" style="padding: 10px 20px;">Contact</a></li>
@@ -101,7 +101,7 @@ animation: slide 8s steps(4) infinite;
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 10px 20px;">Home</a>
 </li>
-<li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_a0f9" style="padding: 10px 20px;">Portfolio</a>
+<li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_a0f9" style="padding: 10px 20px;">Projects</a>
 </li>
 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sajad Dadgar - CV.pdf" target="_blank" style="padding: 10px 20px;">CV</a>
 </li>
@@ -165,7 +165,7 @@ animation: slide 8s steps(4) infinite;
 	
 	<section class="u-align-center u-clearfix u-section-2" id="carousel_a0f9">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-oswald u-text u-text-default u-text-1" data-animation-name="flipIn" data-animation-duration="500" data-animation-direction="X" style="margin-bottom:30px"><b>PortFolio</b>
+        <h1 class="u-custom-font u-font-oswald u-text u-text-default u-text-1" data-animation-name="flipIn" data-animation-duration="500" data-animation-direction="X" style="margin-bottom:30px"><b>Projects</b>
         </h1>
         <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
@@ -359,7 +359,7 @@ animation: slide 8s steps(4) infinite;
 		  <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Dadgar, B. Dadgar, S. (2023) <b>The role of COVID-19 pandemic in the growth of green fintech: Driver or barrier?</b> Book chapter Fintech and Sustainability: How Financial Technologies Can Help Address Today’s Environmental and Societal Challenges, to be published by Palgrave Macmillan on 2023 (<u>Proposal Accepted - Full chapter is under review</u>)
+            </div> Dadgar, B. Dadgar, S. (2023) <b>The role of COVID-19 pandemic in the growth of green fintech: Driver or barrier?</b> Book chapter Fintech and Sustainability: How Financial Technologies Can Help Address Today’s Environmental and Societal Challenges, to be published by Palgrave Macmillan (<u>Proposal Accepted - Full chapter is under review</u>)
           </li>
 
 
