Update the webpage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ overflow: hidden;
 }
 
 .dynamic-txt li{
-color: black;
+color: #293233;
 list-style: none;
 font-size: 20px;
 font-weight: 800;
@@ -57,7 +57,7 @@ animation: slide 8s steps(4) infinite;
   left: 0;
   height: 100%;
   width: 100%;
-  background: #e7ebec;
+  background: #e9e9e9;
   border-left: 2px solid black;
   animation: typing 2s steps(16) infinite;
 }
@@ -124,17 +124,19 @@ animation: slide 8s steps(4) infinite;
 
       <section class="u-clearfix u-image u-section-1" id="sec-e5d2" data-image-width="1834" data-image-height="1080">
         <div class="u-align-center u-clearfix u-sheet u-sheet-1">
-          <div class="u-border-10 u-border-palette-4-base u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="960" data-image-height="960"></div>
-          <h1 class="u-align-center u-text u-text-default u-text-palette-4-base u-text-1">Sajad Dadgar</h1>
+          <div class="u-border-10 u-border-palette-4-base u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="960" data-image-height="960" style="border-color: #293233;"></div>
+          <h1 class="u-align-center u-text u-text-default u-text-palette-4-base u-text-1" style="color: #293233;">Sajad Dadgar</h1>
 
 
 
           <!-- <h3 class="u-align-center u-text u-text-default u-text-2">Machine Learning</h3> -->
           <div class="wrapper">
             <ul class="dynamic-txt">			
-              <li><span>Machine Learning</span></li>
-			  <li><span>Artificial Intelligence</span></li>
               <li><span>Data Science</span></li>
+              <li><span>Machine Learning</span></li>
+              <li><span>Deep Learning</span></li>
+			        <li><span>Artificial Intelligence</span></li>
+              <li><span>Cloud Data Analtic</span></li>
             </ul>
           </div> 
 
