Modify the website

--- a/index.html
+++ b/index.html
@@ -412,11 +412,18 @@ animation: slide 8s steps(4) infinite;
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
             </div> AI Researcher, Cybersecurity Research lab in University of Calgary, Canada
           </li>
+
+
+      <li>
+            <div class="u-list-icon">
+              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+            </div> Data Scientist, Digikala
+          </li>
 		  
 		  <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div> Research Assistant - Medical Image Processing (Supervisor: Dr. Mehdi Neshat, @University of South Australia)
+            </div> Data Science Research Assistant (Supervisor: Dr. Mehdi Neshat, @University of South Australia)
           </li>
 		  
 		  <li>
@@ -513,7 +520,14 @@ animation: slide 8s steps(4) infinite;
           <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div>Introduction to Data Engineering - <a href="https://coursera.org/verify/YZ091FKTT6C2">Certificate</a>
+            </div>Machine Learning in Production - <a href="https://www.coursera.org/learn/introduction-to-machine-learning-in-production?specialization=machine-learning-engineering-for-production-mlops?utm_source=deeplearning-ai&utm_medium=institutions">Certificate</a>
+          </li>
+
+
+          <li>
+            <div class="u-list-icon">
+              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+            </div>Data Engineering Professional Certificate- <a href="https://coursera.org/verify/YZ091FKTT6C2">Certificate</a>
           </li>
           <li>
             <div class="u-list-icon">
