--- a/index.html
+++ b/index.html
@@ -516,6 +516,12 @@ animation: slide 8s steps(4) infinite;
         <h2 class="u-align-center u-custom-font u-font-oswald u-text u-text-1">Certificates</h2>
         <ul class="u-custom-list u-text u-text-2">
 
+          <li>
+            <div class="u-list-icon">
+              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+            </div>Develop Generative AI Applications: Get Started - <a href="https://www.coursera.org/account/accomplishments/verify/6IKHZXAVV8ZY">Certificate</a>
+          </li>
+
 
           <li>
             <div class="u-list-icon">
