Add a new certificate

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ animation: slide 8s steps(4) infinite;
           <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div>Develop Generative AI Applications: Get Started - <a href="https://www.coursera.org/account/accomplishments/verify/6IKHZXAVV8ZY">Certificate</a>
+            </div>Develop Generative AI Applications - <a href="https://www.coursera.org/account/accomplishments/verify/6IKHZXAVV8ZY">Certificate</a>
           </li>
 
 
