--- a/index.html
+++ b/index.html
@@ -533,8 +533,22 @@ animation: slide 8s steps(4) infinite;
           <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
-            </div>Data Engineering Professional Certificate- <a href="https://coursera.org/verify/YZ091FKTT6C2">Certificate</a>
+            </div>Data Engineering Professional Certificate - <a href="https://coursera.org/verify/YZ091FKTT6C2">Certificate</a>
           </li>
+
+          <li>
+            <div class="u-list-icon">
+              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+            </div>Introduction to Data Engineering - <a href="https://coursera.org/verify/YZ091FKTT6C2">Certificate</a>
+          </li>
+
+          <li>
+            <div class="u-list-icon">
+              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
+            </div>Source Systems, Data Ingestion, and Pipelines - <a href="https://coursera.org/verify/MEDQ1FL3K93C">Certificate</a>
+          </li>
+
+
           <li>
             <div class="u-list-icon">
               <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">❯</div>
